WIP 1.16.5 backport