@@ -3,6 +3,7 @@ package org.figuramc.figura.utils;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.server.packs.resources.Resource;
 import net.minecraft.server.packs.resources.ResourceManager;
+import org.apache.commons.io.IOUtils;
 import org.figuramc.figura.FiguraMod;
 
 import java.io.InputStream;
@@ -12,7 +13,7 @@ public class ResourceUtils {
 
     public static byte[] getResource(ResourceManager manager, ResourceLocation path) {
         try (InputStream is = manager.getResource(path).getInputStream()) {
-            return is.readAllBytes();
+            return IOUtils.toByteArray(is);
         } catch (Exception e) {
             FiguraMod.LOGGER.error("", e);
         }
